<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson16</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_child_names">Enter Child Names</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="title_activity_view_records">ViewRecordsActivity</string>
    <string name="lost_children">Lost Children</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="child_name">Child Name</string>
    <string name="child_names">Child Names</string>
    <string name="title_activity_edit">EditActivity</string>

</resources>